--- a/resource/test_form.ui
+++ b/resource/test_form.ui
@@ -359,7 +359,7 @@
    <item row="0" column="0" rowspan="3" colspan="3">
     <widget class="QLabel" name="screen_img_label">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
