--- a/resource/test_form.ui
+++ b/resource/test_form.ui
@@ -263,6 +263,34 @@
       </widget>
      </item>
      <item>
+      <widget class="QLabel" name="char_img_label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>208</width>
+         <height>208</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>208</width>
+         <height>208</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>ㅋ 수형</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
         <widget class="QLabel" name="success_img_label">
